# LoserPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/playwind/loserplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/playwind/example/: FullscreenActivity.kt  PlayerSurfaceView.kt
app/src/main/res/layout/: activity_fullscreen.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/playwind/loserplayer/: ExampleInstrumentedTest.kt
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt  EGL.cpp  EGL.h  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  OboeAudioPlay.cpp  OboeAudioPlay.h  PlayData.cpp  PlayData.h  PlayParams.h  SLAudioPlay.cpp  SLAudioPlay.h  Shader.cpp  Shader.h  (+5 more)
player/src/main/cpp/include/: AndroidLogger.h
player/src/main/cpp/include/ffmpeg/libavutil/: ffversion.h
player/src/main/java/com/playwind/loserplayer/: LoserPlayer.kt
player/src/test/java/com/playwind/loserplayer/: ExampleUnitTest.kt
